--- a/DefectReporter/Client/wwwroot/index.html
+++ b/DefectReporter/Client/wwwroot/index.html
@@ -28,6 +28,8 @@
     </div>
     <script src="_content/Microsoft.AspNetCore.Components.WebAssembly.Authentication/AuthenticationService.js"></script>
     <script src="_framework/blazor.webassembly.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="scripts/chart.js"></script>
 </body>
 
 </html>
